# Genotyper-Firmware

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README  README.md  README.org  copyright.txt  package-lock.json  package.json  prj.conf
.devcontainer/: Dockerfile  devcontainer.json
.husky/: commit-msg
CONTAINER COORDINATE SYSTEM FOR ORCHESTRATOR/: 96 well plate.txt  Tip rack 1000ul.txt
Gero/: .gitignore  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml
MethodSCRIPT_tests/: CV_es_PICO.py  ChronoAmp_es_PICO.py  DPV_es_PICO.py  EIS_es_PICO.py  SWV_es_PICO.py  readme.md
PSOC/: .gitignore  (+1 more)
gero/: .env  .gitignore  Makefile  README.md  pyproject.toml
gero/api_playground/: api_playground.ipynb
gero/docs/source/: gero.commands.rst  modules.rst
gero/prototyping_notebooks/: compute_layout.ipynb  compute_layout_v2.ipynb  config.json  modules.ipynb  robot-context.ipynb  robot.ipynb  smoothie_config_parse.ipynb
gero/sample_config_files/: Robot.json
gero/sample_config_files/.gero/: computed_layout.json
gero/shared_data/: modules.json
gero/src/gero/: __init__.py  config.py  settings.toml  type.py
gero/src/gero/commands/: __init__.py  type.py
gero/src/gero/config/: __init__.py  type.py
gero/src/gero/configuration/: __init__.py  robot_config.py  smoothie_config.py  type.py
gero/src/gero/drivers/: command_builder.py
gero/src/gero/drivers/smoothie/: controller.py
gero/src/gero/protocol/: __init__.py
gero/tests/Gero/commands/: test_command_builder.py  test_type.py
gero/tests/Gero/drivers/: __init__.py
services/hmi/: .gitignore  CMakeLists.txt  README.md  main.cpp  main.qml
services/hmi/docs/ASR/: 1-ui-framework.md
(+646 files in other folders)
