[tool.poetry]
name = "gero"
version = "0.1.0"
description = ""
authors = ["satyam <satyam@technoculture.io>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.0"
jupyter = "^1.0.0"
coloredlogs = "^15.0.1"
PyYAML = "^6.0"
dearpygui = "^1.6.2"
dynaconf = "^3.1.8"

[tool.poetry.dev-dependencies]
Sphinx = "^4.5.0"
pytest = "^7.1.2"
sphinx-rtd-theme = "^1.0.0"
autopep8 = "^1.6.0"
pre-commit = "^2.19.0"
devtools = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
